--- a/wompa.csproj
+++ b/wompa.csproj
@@ -40,7 +40,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="source\cardFactory.cs" />
+    <Compile Include="source\CardFactory.cs" />
     <Compile Include="source\card\CardEntity.cs" />
     <Compile Include="source\card\IValueProp.cs" />
     <Compile Include="source\card\ISuitProp.cs" />
