Add unit test framework

--- a/wompa-tests/wompa-tests.csproj
+++ b/wompa-tests/wompa-tests.csproj
@@ -4,11 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{742474DF-D76D-4A44-8C7C-6900561F3F0C}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{EAE7EC40-8900-4C90-AB16-CA7C2E24024F}</ProjectGuid>
+    <ProjectTypeGuids>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>wompa</RootNamespace>
-    <AssemblyName>wompa</AssemblyName>
+    <RootNamespace>wompa_tests</RootNamespace>
+    <AssemblyName>wompa_tests</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -36,17 +37,20 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb">
+      <HintPath>..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="CardCreation_Tests.cs" />
+    <Compile Include="Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="source\CardFactory.cs" />
-    <Compile Include="source\card\CardEntity.cs" />
-    <Compile Include="source\card\IValueProp.cs" />
-    <Compile Include="source\card\ISuitProp.cs" />
-    <Compile Include="source\core\Suit.cs" />
-    <Compile Include="source\rank\HandRanker.cs" />
-    <Compile Include="source\rank\processor\IRankProcessor.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\wompa.csproj">
+      <Project>{742474df-d76d-4a44-8c7c-6900561f3f0c}</Project>
+      <Name>wompa</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
