--- a/wompa.csproj
+++ b/wompa.csproj
@@ -47,6 +47,10 @@
     <Compile Include="source\core\Suit.cs" />
     <Compile Include="source\rank\HandRanker.cs" />
     <Compile Include="source\rank\processor\IRankProcessor.cs" />
+    <Compile Include="source\test\card\CardCreationTestSuite.cs" />
+    <Compile Include="source\test\card\creation\CardCreationTest.cs" />
+    <Compile Include="source\test\ITest.cs" />
+    <Compile Include="source\test\TestRunner.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
